# kth-counterfeit-predictor

./: .env.example  .gitignore  README.md  pyproject.toml  submit_results.py  test_categorization_machine.py
app/: counterfeit_prediction_machine.py
app/models/: __init__.py  gradient_boosting_model.py  logistic_regression_model.py  preprocessing.py  random_forest_model.py  xgboost_model.py
data/: products_eval.csv  products_test.csv  products_train.csv
my_project.egg-info/: PKG-INFO  requires.txt
scripts/: grid_search_models.py
