[project]
name = "my_project"
version = "0.1.0"
description = "My Python project"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "pandas>=2.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
    "requests>=2.32.0",
]
